# syncify

./: .gitignore  Cargo.toml  License  Readme.md
src/: downloader.rs  lib.rs  lyrics.rs  main.rs  playlist.rs  scrapper.rs  tag.rs  wire.rs  writer.rs
src/dlp/: download.rs  mod.rs  score.rs  search.rs
src/lyrics/: lyrics.rs  mod.rs  sanitize.rs
src/metadata/: mod.rs  tag.rs  writer.rs
src/spotify/: metadata.rs  mod.rs  playlist.rs  track.rs
src/test/: integration.rs
