[package]
name = "syncify"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
scraper = "0.27.0"
macro_colors = "=0.2.0"
id3 = "1.17.0"
futures = "0.3.32"
dirs = "6"
