[package]
name = "syncify"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "syncify"
path = "src/lib.rs"

[dependencies]

futures = "0.3.32"
id3 = "1.17.0"
indicatif = "0.18.6"
macro_colors = "0.2.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustube = "0.6.0"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
